# android-openssl-demo

./: README.md
OpensslDemo/: settings.gradle.kts
OpensslDemo/app/: build.gradle.kts
OpensslDemo/app/src/androidTest/java/com/skuuzie/openssldemo/: ExampleInstrumentedTest.kt
OpensslDemo/app/src/main/: AndroidManifest.xml
OpensslDemo/app/src/main/cpp/: CMakeLists.txt  openssldemo.cpp
OpensslDemo/app/src/main/cpp/openssl_include/openssl/: configuration.h
OpensslDemo/app/src/main/java/com/skuuzie/openssldemo/: MainActivity.kt
OpensslDemo/app/src/main/java/com/skuuzie/openssldemo/corelib/: CoreLibrary.kt  Crypto.kt  CryptoHash.kt  CryptoUtil.kt  ICryptoHash.kt  OpensslHash.kt
OpensslDemo/app/src/main/res/layout/: activity_main.xml
OpensslDemo/app/src/main/res/values/: strings.xml  themes.xml
OpensslDemo/app/src/main/res/values-night/: themes.xml
OpensslDemo/app/src/test/java/com/skuuzie/openssldemo/: ExampleUnitTest.kt
OpensslDemo/gradle/wrapper/: gradle-wrapper.properties
openssl_build/: README.md  build.sh
